--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   color: #ffefbf;
   text-align: center;
   font-family: 'Caveat', 'Comic Sans MS', sans-serif;
-  background-image: url('/images/teacats.jpg');
+  background-image: url('./images/teacats.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
